# libwisp-rs

./: Cargo.toml  README.md  TODO.md
.github/workflows/: close_connection.yaml  close_connection.yml  connect_and_get_server.yaml  http_request.yaml  set_connection_type.yaml  set_connection_type.yml  switch_server.yaml
docs/: ConnectionType.md  WispClose.md  WispContext.md  WispGetConnectionType.md  WispGetServer.md  WispHTTPMethod.md  WispHTTPRequest.md  WispHTTPResponse.md  WispPktType.md  WispReadPkt.md  WispSendPkt.md  WispSetConnectionType.md  WispSetServer.md  WispSwitchServer.md
examples/: close_connection.rs  connect_and_get_server.rs  http_request.rs  send_packet.rs  set_connection_type.rs  switch_server.rs
src/: client.rs  http.rs  lib.rs  pkt.rs  types.rs
